--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         }
         #message {
             margin-top: 10px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -66,7 +67,7 @@
         const messageEl = document.getElementById('message');
 
         try {
-            const response = await fetch('https://seu-backend.replit.app/login', {
+            const response = await fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -82,20 +83,47 @@
                 messageEl.textContent = 'Login bem-sucedido!';
                 messageEl.style.color = 'green';
 
-                // Redireciona para a página protegida
-                window.location.href = 'home.html';
+                // Redireciona para a página protegida após 1 segundo
+                setTimeout(() => {
+                    window.location.href = 'home.html';
+                }, 1000);
             } else {
                 messageEl.textContent = 'Erro: ' + data.message;
                 messageEl.style.color = 'red';
             }
         } catch (error) {
-            console.error('Erro:', error);
-            messageEl.textContent = 'Erro ao fazer login.';
+            console.error('Erro ao fazer login:', error);
+            messageEl.textContent = 'Erro ao fazer login. Verifique o console.';
             messageEl.style.color = 'red';
+        }
+    });
+
+    // Valida se o usuário já está logado
+    window.addEventListener('load', () => {
+        const token = localStorage.getItem('token');
+        if (token) {
+            fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/ia', {
+                method: 'POST',
+                headers: {
+                    'Authorization': `Bearer ${token}`,
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ question: 'Você está online?' }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.answer) {
+                    window.location.href = 'home.html';  // Redireciona para home se o token for válido
+                }
+            })
+            .catch(() => {
+                localStorage.removeItem('token');  // Remove token inválido
+            });
         }
     });
 </script>
 
 </body>
 </html>
+
 
