--- a/index.html
+++ b/index.html
@@ -12,31 +12,47 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background-color: #e0f7fa; /* Azul claro */
         }
         .login-container {
             background-color: white;
-            padding: 20px;
+            padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            text-align: center;
         }
         .input-group {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            text-align: left;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
         button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
+            width: 100%;
+            padding: 10px;
+            background-color: #0288d1;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #0277bd;
         }
         #message {
             margin-top: 10px;
-            font-weight: bold;
+            color: red;
         }
     </style>
 </head>
@@ -60,7 +76,7 @@
 
 <script>
     document.getElementById('loginForm').addEventListener('submit', async (event) => {
-        event.preventDefault();  // Evita o recarregamento da página
+        event.preventDefault();
 
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
@@ -69,61 +85,31 @@
         try {
             const response = await fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/login', {
                 method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username, password })
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ username, password }),
             });
 
             const data = await response.json();
 
             if (response.ok) {
-                // Armazena o token JWT no localStorage
                 localStorage.setItem('token', data.token);
                 messageEl.textContent = 'Login bem-sucedido!';
                 messageEl.style.color = 'green';
-
-                // Redireciona para a página protegida após 1 segundo
                 setTimeout(() => {
                     window.location.href = 'home.html';
                 }, 1000);
             } else {
                 messageEl.textContent = 'Erro: ' + data.message;
-                messageEl.style.color = 'red';
             }
         } catch (error) {
-            console.error('Erro ao fazer login:', error);
-            messageEl.textContent = 'Erro ao fazer login. Verifique o console.';
-            messageEl.style.color = 'red';
-        }
-    });
-
-    // Valida se o usuário já está logado
-    window.addEventListener('load', () => {
-        const token = localStorage.getItem('token');
-        if (token) {
-            fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/ia', {
-                method: 'POST',
-                headers: {
-                    'Authorization': `Bearer ${token}`,
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ question: 'Você está online?' }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.answer) {
-                    window.location.href = 'home.html';  // Redireciona para home se o token for válido
-                }
-            })
-            .catch(() => {
-                localStorage.removeItem('token');  // Remove token inválido
-            });
+            messageEl.textContent = 'Erro ao fazer login.';
+            console.error(error);
         }
     });
 </script>
 
 </body>
 </html>
+
 
 
