--- a/home.html
+++ b/home.html
@@ -3,25 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Protegida</title>
+    <title>Home</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1a237e; /* Azul escuro */
+            color: white;
+        }
+        header {
+            background-color: #0d47a1;
+            padding: 20px;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #1565c0;
+        }
+        nav a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+        nav a:hover {
+            background-color: #0d47a1;
+        }
+        .content {
+            padding: 20px;
+            text-align: center;
+        }
+        #logoutButton {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #d32f2f;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #logoutButton:hover {
+            background-color: #b71c1c;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo à Página Protegida!</h1>
-    <button id="logoutButton">Sair</button>
 
-    <script>
-        const token = localStorage.getItem('token');
+<header>Bem-vindo à Página Home</header>
 
-        if (!token) {
-            alert('Você precisa fazer login primeiro!');
-            window.location.href = 'index.html';  // Redireciona para a página de login
-        }
+<nav>
+    <a href="#">Início</a>
+    <a href="#">Perfil</a>
+    <a href="#">Configurações</a>
+    <a href="#" id="logoutButton">Sair</a>
+</nav>
 
-        document.getElementById('logoutButton').addEventListener('click', () => {
-            localStorage.removeItem('token');  // Remove o token do localStorage
-            window.location.href = 'index.html';  // Redireciona para a página de login
-        });
-    </script>
+<div class="content">
+    <h1>Olá, você está logado!</h1>
+    <p>Aproveite o conteúdo disponível.</p>
+</div>
+
+<script>
+    const token = localStorage.getItem('token');
+    if (!token) {
+        alert('Você precisa estar logado!');
+        window.location.href = 'index.html';
+    }
+
+    document.getElementById('logoutButton').addEventListener('click', () => {
+        localStorage.removeItem('token');
+        window.location.href = 'index.html';
+    });
+</script>
+
 </body>
 </html>
+
 
