--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #e0f7fa; /* Azul claro */
+            background-color: #121212; /* Fundo preto elegante */
+            font-family: 'Poppins', sans-serif;
+            color: #ffffff;
         }
         .login-container {
-            background-color: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            background-color: #1e1e1e; /* Fundo do formulário mais escuro */
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            width: 400px;
             text-align: center;
+        }
+        .login-container h2 {
+            margin-bottom: 20px;
+            color: #90caf9; /* Azul claro para destacar o título */
         }
         .input-group {
             margin-bottom: 15px;
@@ -29,30 +36,40 @@
         label {
             display: block;
             margin-bottom: 5px;
-            font-weight: bold;
+            font-weight: 500;
+            color: #ffffff;
         }
         input {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 5px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            padding: 12px;
+            border: 1px solid #424242;
+            border-radius: 8px;
+            margin-bottom: 10px;
+            background-color: #2c2c2c;
+            color: white;
+            outline: none;
+        }
+        input:focus {
+            border-color: #90caf9; /* Destaque em azul claro */
         }
         button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background-color: #0288d1;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
+            font-weight: 600;
+            transition: background-color 0.3s ease;
         }
         button:hover {
             background-color: #0277bd;
         }
         #message {
-            margin-top: 10px;
-            color: red;
+            margin-top: 15px;
+            color: #ff5252;
+            font-weight: 600;
         }
     </style>
 </head>
@@ -94,7 +111,7 @@
             if (response.ok) {
                 localStorage.setItem('token', data.token);
                 messageEl.textContent = 'Login bem-sucedido!';
-                messageEl.style.color = 'green';
+                messageEl.style.color = '#00e676';  // Verde para sucesso
                 setTimeout(() => {
                     window.location.href = 'home.html';
                 }, 1000);
@@ -110,6 +127,7 @@
 
 </body>
 </html>
+
 
 
 
