--- a/home.html
+++ b/home.html
@@ -4,66 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #1a237e; /* Azul escuro */
-            color: white;
+            font-family: 'Poppins', sans-serif;
+            background-color: #121212; /* Fundo preto elegante */
+            color: #ffffff;
         }
         header {
-            background-color: #0d47a1;
+            background-color: #1e1e1e;
             padding: 20px;
             text-align: center;
             font-size: 24px;
             font-weight: bold;
+            color: #90caf9; /* Azul claro */
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #1565c0;
+            background-color: #333333;
+            padding: 10px;
         }
         nav a {
             color: white;
             padding: 14px 20px;
             text-decoration: none;
-            text-transform: uppercase;
+            font-weight: 500;
+            margin: 0 10px;
         }
         nav a:hover {
-            background-color: #0d47a1;
+            background-color: #424242;
+            border-radius: 5px;
         }
         .content {
-            padding: 20px;
+            padding: 30px;
             text-align: center;
         }
-        #logoutButton {
-            margin-top: 20px;
-            padding: 10px 20px;
+        .content h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            color: #90caf9;
+        }
+        .logout-button {
+            padding: 12px 20px;
             background-color: #d32f2f;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
-        #logoutButton:hover {
+        .logout-button:hover {
             background-color: #b71c1c;
         }
     </style>
 </head>
 <body>
 
-<header>Bem-vindo à Página Home</header>
+<header>Página Inicial</header>
 
 <nav>
     <a href="#">Início</a>
     <a href="#">Perfil</a>
     <a href="#">Configurações</a>
+    <a href="#">IA</a>
     <a href="#" id="logoutButton">Sair</a>
 </nav>
 
 <div class="content">
-    <h1>Olá, você está logado!</h1>
-    <p>Aproveite o conteúdo disponível.</p>
+    <h1>Bem-vindo à Página Home!</h1>
+    <p>Você está logado com sucesso.</p>
 </div>
 
 <script>
@@ -81,5 +92,6 @@
 
 </body>
 </html>
+
 
 
