--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
     <a href="#">Início</a>
     <a href="#">Perfil</a>
     <a href="#">Configurações</a>
-    <a href="#">IA</a>
+    <a href="ia.html">IA</a> <!-- Corrigido para redirecionar para a página ia.html -->
     <a href="#" id="logoutButton">Sair</a>
 </nav>
 
@@ -92,6 +92,7 @@
 
 </body>
 </html>
+
 
 
 
