--- a/ia.html
+++ b/ia.html
@@ -57,7 +57,7 @@
             padding: 10px;
             background-color: #1e1e1e;
         }
-        input {
+        input[type="text"] {
             flex: 1;
             padding: 12px;
             border: 1px solid #424242;
@@ -95,10 +95,17 @@
     <button id="sendButton">Enviar</button>
 </div>
 
+<div class="input-container">
+    <input type="file" id="fileInput" accept=".txt,.pdf">
+    <button id="uploadButton">Enviar Arquivo</button>
+</div>
+
 <script>
     const chatContainer = document.getElementById('chatContainer');
     const userInput = document.getElementById('userInput');
     const sendButton = document.getElementById('sendButton');
+    const fileInput = document.getElementById('fileInput');
+    const uploadButton = document.getElementById('uploadButton');
 
     function appendMessage(content, isUser = false) {
         const messageDiv = document.createElement('div');
@@ -142,12 +149,44 @@
         }
     }
 
+    async function uploadFile() {
+        const file = fileInput.files[0];
+        if (!file) {
+            alert('Selecione um arquivo para enviar.');
+            return;
+        }
+
+        const formData = new FormData();
+        formData.append('file', file);
+
+        try {
+            const response = await fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/upload', {
+                method: 'POST',
+                headers: {
+                    'Authorization': `Bearer ${localStorage.getItem('token')}`
+                },
+                body: formData
+            });
+
+            const data = await response.json();
+            if (data.content) {
+                appendMessage(data.content);  // Adiciona o conteúdo do arquivo como mensagem
+            } else {
+                appendMessage('Erro: Não foi possível ler o arquivo.');
+            }
+        } catch (error) {
+            console.error('Erro:', error);
+            appendMessage('Erro: Ocorreu um problema ao enviar o arquivo.');
+        }
+    }
+
     sendButton.addEventListener('click', sendMessage);
     userInput.addEventListener('keypress', (e) => {
         if (e.key === 'Enter') sendMessage();
     });
 
-    // Verifica se o usuário está autenticado
+    uploadButton.addEventListener('click', uploadFile);
+
     if (!localStorage.getItem('token')) {
         alert('Você precisa estar logado para acessar esta página.');
         window.location.href = 'index.html';
@@ -156,3 +195,4 @@
 
 </body>
 </html>
+
