--- a/ia.html
+++ b/ia.html
@@ -82,6 +82,24 @@
         button:hover {
             background-color: #0277bd;
         }
+        .spinner {
+            display: none;
+            margin: 20px auto;
+            border: 4px solid rgba(255, 255, 255, 0.2);
+            border-top: 4px solid #90caf9;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
     </style>
 </head>
 <body>
@@ -90,22 +108,18 @@
 
 <div class="chat-container" id="chatContainer"></div>
 
+<div class="spinner" id="loadingSpinner"></div>
+
 <div class="input-container">
     <input type="text" id="userInput" placeholder="Digite sua mensagem..." autocomplete="off">
     <button id="sendButton">Enviar</button>
-</div>
-
-<div class="input-container">
-    <input type="file" id="fileInput" accept=".txt,.pdf">
-    <button id="uploadButton">Enviar Arquivo</button>
 </div>
 
 <script>
     const chatContainer = document.getElementById('chatContainer');
     const userInput = document.getElementById('userInput');
     const sendButton = document.getElementById('sendButton');
-    const fileInput = document.getElementById('fileInput');
-    const uploadButton = document.getElementById('uploadButton');
+    const loadingSpinner = document.getElementById('loadingSpinner');
 
     function appendMessage(content, isUser = false) {
         const messageDiv = document.createElement('div');
@@ -127,6 +141,8 @@
         appendMessage(message, true);  // Adiciona a mensagem do usuário
         userInput.value = '';
 
+        showLoading();  // Exibe o spinner de carregamento
+
         try {
             const response = await fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/ia', {
                 method: 'POST',
@@ -138,6 +154,8 @@
             });
 
             const data = await response.json();
+            hideLoading();  // Oculta o spinner após receber a resposta
+
             if (data.answer) {
                 appendMessage(data.answer);  // Adiciona a resposta do GPT
             } else {
@@ -145,39 +163,17 @@
             }
         } catch (error) {
             console.error('Erro:', error);
+            hideLoading();  // Oculta o spinner em caso de erro
             appendMessage('Erro: Ocorreu um problema ao se comunicar com a IA.');
         }
     }
 
-    async function uploadFile() {
-        const file = fileInput.files[0];
-        if (!file) {
-            alert('Selecione um arquivo para enviar.');
-            return;
-        }
+    function showLoading() {
+        loadingSpinner.style.display = 'block';  // Exibe o spinner
+    }
 
-        const formData = new FormData();
-        formData.append('file', file);
-
-        try {
-            const response = await fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/upload', {
-                method: 'POST',
-                headers: {
-                    'Authorization': `Bearer ${localStorage.getItem('token')}`
-                },
-                body: formData
-            });
-
-            const data = await response.json();
-            if (data.content) {
-                appendMessage(data.content);  // Adiciona o conteúdo do arquivo como mensagem
-            } else {
-                appendMessage('Erro: Não foi possível ler o arquivo.');
-            }
-        } catch (error) {
-            console.error('Erro:', error);
-            appendMessage('Erro: Ocorreu um problema ao enviar o arquivo.');
-        }
+    function hideLoading() {
+        loadingSpinner.style.display = 'none';  // Oculta o spinner
     }
 
     sendButton.addEventListener('click', sendMessage);
@@ -185,8 +181,7 @@
         if (e.key === 'Enter') sendMessage();
     });
 
-    uploadButton.addEventListener('click', uploadFile);
-
+    // Verifica se o usuário está autenticado
     if (!localStorage.getItem('token')) {
         alert('Você precisa estar logado para acessar esta página.');
         window.location.href = 'index.html';
@@ -195,4 +190,5 @@
 
 </body>
 </html>
+
 
