--- a/home.html
+++ b/home.html
@@ -26,34 +26,56 @@
             align-items: center;
             background-color: #333333;
             padding: 10px 20px;
+            flex-wrap: wrap;
+        }
+        .nav-links {
+            display: flex;
+            gap: 10px;
         }
         nav a {
             color: white;
-            padding: 10px 15px;
             text-decoration: none;
             font-weight: 500;
+            padding: 10px 15px;
         }
         nav a:hover {
             background-color: #424242;
             border-radius: 5px;
         }
-        .search-bar {
+        .search-container {
+            display: flex;
+            align-items: center;
             flex-grow: 1;
-            margin-left: 20px;
-            position: relative;
+            margin: 10px 0;
         }
-        .search-bar input {
+        .search-bar {
             width: 100%;
+            max-width: 400px;
             padding: 10px;
             border: 1px solid #424242;
             border-radius: 5px;
             background-color: #2c2c2c;
             color: white;
         }
+        .logout-container {
+            margin-left: 10px;
+        }
+        .logout-button {
+            padding: 10px 15px;
+            background-color: #d32f2f;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .logout-button:hover {
+            background-color: #b71c1c;
+        }
         .content {
             padding: 20px;
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
         }
         .card {
@@ -74,18 +96,6 @@
             bottom: 0;
             width: 100%;
         }
-        .logout-button {
-            padding: 10px 15px;
-            background-color: #d32f2f;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .logout-button:hover {
-            background-color: #b71c1c;
-        }
     </style>
 </head>
 <body>
@@ -93,22 +103,26 @@
 <header>Página Inicial - Bem-vindo!</header>
 
 <nav>
-    <div>
+    <div class="nav-links">
         <a href="#">Início</a>
         <a href="#">Perfil</a>
         <a href="#">Configurações</a>
         <a href="ia.html">IA</a>
     </div>
-    <div class="search-bar">
-        <input type="text" placeholder="Pesquisar...">
+
+    <div class="search-container">
+        <input type="text" class="search-bar" placeholder="Pesquisar...">
     </div>
-    <button class="logout-button" id="logoutButton">Sair</button>
+
+    <div class="logout-container">
+        <button class="logout-button" id="logoutButton">Sair</button>
+    </div>
 </nav>
 
 <div class="content">
-    <div class="card">
+    <div class="card" id="onlineUsersCard">
         <h2>Usuários Online</h2>
-        <p>Veja quem está ativo no momento!</p>
+        <p id="onlineUsersCount">Carregando...</p>
     </div>
     <div class="card">
         <h2>Últimas Notícias</h2>
@@ -140,10 +154,24 @@
         localStorage.removeItem('token');
         window.location.href = 'index.html';
     });
+
+    async function fetchOnlineUsers() {
+        try {
+            const response = await fetch('https://1cc9f2a3-529d-40f7-b28d-f1f4c29480c4-00-3lxlh70ct2il8.spock.replit.dev/online-users');
+            const data = await response.json();
+            document.getElementById('onlineUsersCount').textContent = `${data.online} usuário(s) online`;
+        } catch (error) {
+            console.error('Erro ao buscar usuários online:', error);
+            document.getElementById('onlineUsersCount').textContent = 'Erro ao carregar.';
+        }
+    }
+
+    fetchOnlineUsers();
 </script>
 
 </body>
 </html>
+
 
 
 
