--- a/home.html
+++ b/home.html
@@ -62,10 +62,6 @@
             position: relative;
         }
 
-        nav a:hover::after {
-            width: 100%;
-        }
-
         .badge {
             background-color: red;
             color: white;
@@ -73,8 +69,8 @@
             padding: 5px;
             font-size: 12px;
             position: absolute;
-            top: -5px;
-            right: -10px;
+            top: -8px; /* Ajusta a posição vertical */
+            right: -8px; /* Ajusta a posição horizontal */
         }
 
         .content {
@@ -147,7 +143,10 @@
         <a href="#">Início</a>
         <a href="#">Perfil</a>
         <a href="#">Configurações</a>
-        <a href="ia.html">IA <span class="badge">3</span></a>
+        <a href="ia.html">
+            <span class="card-icon">💬</span>
+            <span class="badge">3</span>
+        </a>
     </div>
     <div>
         <button class="theme-switch-button" id="themeSwitch">🌙 Alternar Tema</button>
@@ -165,12 +164,6 @@
         <div class="card-icon">📰</div>
         <h2>Últimas Notícias</h2>
         <p>Mantenha-se informado sobre as atualizações recentes.</p>
-    </div>
-    <div class="card">
-        <div class="card-icon">💬</div>
-        <h2>Chat com IA</h2>
-        <p>Acesse a IA e tire suas dúvidas em tempo real.</p>
-        <a href="ia.html">Iniciar Chat</a>
     </div>
     <div class="card">
         <div class="card-icon">📊</div>
@@ -217,6 +210,7 @@
 
 </body>
 </html>
+
 
 
 
